--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -6,7 +6,7 @@ widget_selected: selected
 ---
 
 
-<div class="wrapper">
+<div id="textbody">
   <h1>Widgets</h1>
   <div>
     <h2>What is a Widget?</h2>
