--- a/examples/site/more.html
+++ b/examples/site/more.html
@@ -4,7 +4,7 @@ title: More
 name: more
 more_selected: selected
 ---
-<div class="wrapper">
+<div id="textbody">
   <h1>The Uranium Philosophy</h1>
   
   <div id="philosophy">
