--- a/examples/site/index.html
+++ b/examples/site/index.html
@@ -88,15 +88,15 @@ home_selected: selected
           <div data-ur-set="carousel" data-ur-touch="disabled" data-ur-state="enabled">
             <div data-ur-carousel-component="view_container" data-ur-clones="2">
               <div data-ur-carousel-component="scroll_container">
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov1.JPG"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov2.JPG"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov3.JPG"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov4.JPG"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov5.JPG"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov6.jpg"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov7.jpg"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov8.jpg"/>
-                <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov9.png"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov1.JPG"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov2.JPG"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov3.JPG"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov4.JPG"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov5.JPG"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov6.jpg"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov7.jpg"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov8.jpg"/>
+                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov9.png"/>
               </div> <!-- scroll_container end -->
               <div class="cbutton" id="exback" data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
               <div class="cbutton" id="exnext" data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-state="enabled">&gt;</div>
