beta custom uranium

--- a/examples/site/index.html
+++ b/examples/site/index.html
@@ -40,7 +40,7 @@ home_selected: selected
   <h2>Why use Uranium?</h2>
   <h3>It's Lightweight</h3>
   <p>
-    The whole Uranium library is 15 KB zipped! This includes all the widgets and <a href="http://xiujs.com">xui</a>.
+    The whole Uranium library is 15 KB zipped! This includes all the widgets and <a href="http://xuijs.com">xui</a>.
   </p>
   
   <h3>It's Easy to Use</h3>
