--- a/examples/site/index.html
+++ b/examples/site/index.html
@@ -16,7 +16,7 @@ home_selected: selected
       <span>&mdash; Otto Frederick Rohwedder*</span>
     </p>
   </aside>
-  <h2>What is Uranium?</h2>
+  <h1>What is Uranium?</h1>
   <p>
     Uranium is a set of widgets &ndash; snippets of code that allow you to do neat things on your website.
   </p>
@@ -37,7 +37,7 @@ home_selected: selected
     as you can see by the examples below, they're great on a desktop site too.
   </p>
   
-  <h2>Why use Uranium?</h2>
+  <h1>Why use Uranium?</h1>
   <h3>It's Lightweight</h3>
   <p>
     The whole Uranium library is 15 KB zipped! This includes all the widgets and <a href="http://xuijs.com">xui</a>.
@@ -52,7 +52,7 @@ home_selected: selected
   <hr />
   
   
-  <h2>What can Uranium do?</h2>
+  <h1>What can Uranium do?</h1>
   <div class="ur_ex" data-ur-set="tabs">
     <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</h3>
     <h3 data-ur-tabs-component="button" data-ur-tab-id="code" data-ur-state="disabled">The Code</h3>
@@ -163,7 +163,7 @@ home_selected: selected
   <hr />
     
     
-  <h2>Uranium is used by...</h2>
+  <h1>Uranium is used by&hellip;</h1>
   <div id="threelogoholder">
     <a href="http://m.macys.com/"><img src="images/BW_macys.png" alt="Macy's" /></a>
     <a href="http://m.cancer.org/"><img src="images/BW_AmCancer.png" alt="ACS" /></a>
