--- a/examples/site/widgets/carousel.html
+++ b/examples/site/widgets/carousel.html
@@ -376,7 +376,7 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
     console.log("You clicked:", e.target.src);
   });
   x$("#jump").click(function() {
-    Ur.Widgets["carousel"]["MyFirstCarousel"].jump_to_index(4);
+    Ur.Widgets["carousel"]["MyFirstCarousel"].jumpToIndex(4);
   });
 </script>
 {% endhighlight %}
