add in a toggler example widget

--- a/migration/index.html
+++ b/migration/index.html
@@ -9,11 +9,16 @@
 
     <!-- Dev Links to Javascript Files -->
     <script src="../lib/external/xui-2.3.2.js"></script>
+    <script src="../lib/external/jquery-1.9.1.js"></script>
     <!-- <script src="../lib/external/showhide.js"></script> -->
     <!-- <script src="../lib/external/fade.js"></script> -->
-    <script src="../lib/uranium_mixins.js"></script>
+    <!-- <script src="../lib/uranium_mixins.js"></script> -->
     <!-- The one below is to the widget you're working on -->
-    <script src="../lib/input_clear.js"></script>
+    <!-- <script src="../lib/toggler.js"></script>
+    <script src="../lib/tabs.js"></script> -->
+    <script src="../lib/jQuery.Uranium.js"></script>
+
+
 
     <!-- Stylesheets -->
     <!-- <link rel="stylesheet" type='text/css' href='css/test.css' /> -->
@@ -22,6 +27,15 @@
     <h1>Migration Index</h1>
     <div>Just getting it working for now.</div>
 
+    <div data-ur-set='toggler'>
+      <div data-ur-toggler-component='button'>Click Here!</div>
+        <ul data-ur-toggler-component='content'>
+          <li> Hat </li>
+          <li> Socks </li>
+          <li> Shoes </li>
+          <li> Gloves </li>
+          <li> Shirts </li>
+        </ul>
     </div>
   </body>
 </html>
