--- a/migration/index.html
+++ b/migration/index.html
@@ -27,6 +27,9 @@
     <h1>Migration Index</h1>
     <div>Just getting it working for now.</div>
 
+    <hr>
+
+    <h1>Togglers</h1>
     <div data-ur-set='toggler'>
       <div data-ur-toggler-component='button'>Click Here1!</div>
       <ul data-ur-toggler-component='content'>
@@ -58,6 +61,9 @@
       </ul>
     </div>
 
+    <hr>
+
+    <h1>Tabs</h1>
     <div data-ur-set='tabs' data-ur-id="tabs-test">
       <span data-ur-tabs-component='button' data-ur-tab-id='first' data-ur-state='enabled'> First </span>
       <span data-ur-tabs-component='button' data-ur-tab-id='second'> Second </span>
@@ -69,6 +75,15 @@
 
     <div data-ur-set='tabs'>
       <span data-ur-tabs-component='button' data-ur-tab-id='first' data-ur-state='enabled'> First </span>
+      <span data-ur-tabs-component='button' data-ur-tab-id='second'> Second </span>
+      <span data-ur-tabs-component='button' data-ur-tab-id='third'> Third </span>
+      <div data-ur-tabs-component='content' data-ur-tab-id='first' data-ur-state='enabled'>First Content</div>
+      <div data-ur-tabs-component='content' data-ur-tab-id='second'>Second Content</div>
+      <div data-ur-tabs-component='content' data-ur-tab-id='third'>Third Content</div>
+    </div>
+
+    <div data-ur-set='tabs' data-ur-closeable="true">
+      <span data-ur-tabs-component='button' data-ur-tab-id='first'> First </span>
       <span data-ur-tabs-component='button' data-ur-tab-id='second'> Second </span>
       <span data-ur-tabs-component='button' data-ur-tab-id='third'> Third </span>
       <div data-ur-tabs-component='content' data-ur-tab-id='first' data-ur-state='enabled'>First Content</div>
