input clear css

--- a/migration/index.html
+++ b/migration/index.html
@@ -91,5 +91,20 @@
       <div data-ur-tabs-component='content' data-ur-tab-id='third'>Third Content</div>
     </div>
 
+    <hr>
+
+    <h1>Input Clear</h1>
+    <div data-ur-set='input-clear'>
+      <input data-ur-input-clear-component='input' type='text'/>
+    </div>
+
+    <div data-ur-set='input-clear'>
+      <input data-ur-input-clear-component='input' type='text'/>
+    </div>
+
+    <div data-ur-set='input-clear'>
+      <input data-ur-input-clear-component='input' type='text'/>
+    </div>
+
   </body>
 </html>
