add in the zoom widget

--- a/migration/index.html
+++ b/migration/index.html
@@ -417,5 +417,17 @@
       </form>
     </div>
 
+    <hr>
+
+    <h1>Zoom</h1>
+    <div data-ur-set="zoom" data-ur-zoom-component="view_container">
+      <img data-ur-zoom-component="img" width="500" height="287" src="images/pic-normal.jpeg" data-ur-src="images/pic-large.jpeg">
+      <span data-ur-zoom-component="button">
+        <span>+</span>
+        <span>&minus;</span>
+      </span>
+      <div data-ur-zoom-component="loading" data-ur-state="disabled">Loading&hellip;</div>
+    </div>
+
   </body>
 </html>
