carousel items for testing

--- a/migration/index.html
+++ b/migration/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Migration Index</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <!-- Final Build for Testing -->
     <!-- <script src="../build/src/uranium-pretty.js"></script> -->
@@ -427,6 +427,25 @@
         <span>&minus;</span>
       </span>
       <div data-ur-zoom-component="loading" data-ur-state="disabled">Loading&hellip;</div>
+    </div>
+
+    <hr>
+
+    <h1>Carousel</h1>
+    <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-id="MyFirstCarousel">
+      <span data-ur-carousel-component="count"> -- count -- </span>
+      <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
+      <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
+      <div data-ur-carousel-component='scroll_container'>
+        <img data-ur-carousel-component='item' src='images/sample1.png' alt="1" />
+        <img data-ur-carousel-component='item' src='images/sample2.png' alt="2" />
+        <img data-ur-carousel-component='item' src='images/sample3.png' alt="3" />
+        <img data-ur-carousel-component='item' src='images/sample4.png' alt="4" />
+        <img data-ur-carousel-component='item' src='images/sample5.png' alt="5" />
+        <img data-ur-carousel-component='item' src='images/sample6.png' alt="6" />
+        <img data-ur-carousel-component='item' src='images/sample7.png' alt="7" />
+        <img data-ur-carousel-component='item' src='images/sample8.png' alt="8" />
+      </div>
     </div>
 
   </body>
