basic jquerification of carousel - still need to debug some stuff

--- a/migration/index.html
+++ b/migration/index.html
@@ -433,6 +433,7 @@
 
     <h1>Carousel</h1>
     <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-id="MyFirstCarousel">
+      <div data-ur-carousel-component="dots"></div>
       <span data-ur-carousel-component="count"> -- count -- </span>
       <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
       <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
