--- a/migration/index.html
+++ b/migration/index.html
@@ -432,6 +432,7 @@
     <hr>
 
     <h1>Carousel</h1>
+    <!--<p id="jump" onclick="Ur.Widgets.carousel.JumpCarousel.jumpToIndex(4)">Jump to 5th item</p>-->
     <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-id="MyFirstCarousel">
       <div data-ur-carousel-component="dots"></div>
       <span data-ur-carousel-component="count"> -- count -- </span>
