--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ home_selected: selected
 ---
 
 <div class="top_wrapper desktop">
-  <div id="uraniumlogo"></div><!-- uraniumlogo-->
-  <div id="small_desc">Fast, Lean Web<br />Interaction Library.<small>*for mobile too!</small></div>
+  <div id="small_desc">Fast, Lean Web Interaction Library.<small>*for mobile too!</small></div>
 </div><!-- top_wrapper-->
 <div id="textbody">
   <aside id="quote" class="desktop">
@@ -48,79 +47,92 @@ home_selected: selected
     Uranium requires <i>zero</i> javascript programming on your part.
   </p>
   <small id="sidenote">*he may not have actually said this, but we think he'd love Uranium anyway.</small>
-  
   <hr />
   
   
-  <h2>What can Uranium do?</h2>
+  <h2>Start using Uranium?</h2>
+
+  <!-- Toggler Example -->
   <div class="ur_ex" data-ur-set="tabs">
-    <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</h3>
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Toggler</h3>
     <h3 data-ur-tabs-component="button" data-ur-tab-id="code" data-ur-state="disabled">The Code</h3>
-      <div class="example" data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
-        <div id="extoggler" data-ur-set="toggler">
-          <a href="{{site.url}}/widgets/toggler.html"><div id="extitle">Toggler</div></a>
-          <div id="exbutton" data-ur-toggler-component="button">Click on the button</div>
-          <div id="extoggler_content" data-ur-toggler-component="content">And content appears</div>
+    <!-- example start -->
+    <div class="example" data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
+      <div id="extoggler" data-ur-set="toggler">
+        <a href="{{site.url}}/widgets/toggler.html"><div id="extitle">Toggler</div></a>
+        <div id="exbutton" data-ur-toggler-component="button">Click on the button</div>
+        <div id="extoggler_content" data-ur-toggler-component="content">And content appears</div>
+      </div>
+    </div>
+    <!-- example end-->
+    <div class="mainpage_code" data-ur-tabs-component="content" data-ur-tab-id="code" data-ur-state="disabled">
+      {% highlight html %}
+      <div data-ur-set="toggler">
+        <p>Toggler</p>
+        <div data-ur-toggler-component="button">
+          <p>Click on the button</p>
         </div>
-      </div><!-- example end-->
-      <div class="mainpage_code" data-ur-tabs-component="content" data-ur-tab-id="code" data-ur-state="disabled">
-{% highlight html %}
-<div data-ur-set="toggler">
-  <p>Toggler</p>
-  <div data-ur-toggler-component="button">
-    <p>Click on the button</p>
-  </div>
-  <div data-ur-toggler-component="content">
-    <p>And content appears</p>
-  </div>
-</div>
-{% endhighlight %}
-      </div><!-- code end-->
+        <div data-ur-toggler-component="content">
+          <p>And content appears</p>
+        </div>
+      </div>
+      {% endhighlight %}
+    </div><!-- code end-->
   </div>
   <hr />
-  
+
+  <!-- Carousel Example -->
+  <h3> Carousel Example </h3>
+  <div class="example" id="carousel" data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
+    <div id="excarousel">
+      <a href="{{site.url}}/widgets/carousel.html"><div id="extitle">Carousel</div></a>
+      <div data-ur-set="carousel" data-ur-touch="disabled" data-ur-state="enabled">
+        <div data-ur-carousel-component="view_container" data-ur-clones="2">
+          <div data-ur-carousel-component="scroll_container">
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov1.JPG"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov2.JPG"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov3.JPG"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov4.JPG"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov5.JPG"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov6.jpg"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov7.jpg"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov8.jpg"/>
+            <img data-ur-carousel-component="item" src="/stylesheets/resources/moov9.png"/>
+          </div> <!-- scroll_container end -->
+          <div class="cbutton" id="exback" data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
+          <div class="cbutton" id="exnext" data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-state="enabled">&gt;</div>
+        </div><!-- view container end -->
+      </div>
+    </div>
+  </div><!-- exampleend-->
   <div class="ur_ex" data-ur-set="tabs">
-    <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</h3>
-    <h3 data-ur-tabs-component="button" data-ur-tab-id="code" data-ur-state="disabled">The Code</h3>
-      <div class="example" id="carousel" data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
-        <div id="excarousel">
-          <a href="{{site.url}}/widgets/carousel.html"><div id="extitle">Carousel</div></a>
-          <div data-ur-set="carousel" data-ur-touch="disabled" data-ur-state="enabled">
-            <div data-ur-carousel-component="view_container" data-ur-clones="2">
-              <div data-ur-carousel-component="scroll_container">
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov1.JPG"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov2.JPG"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov3.JPG"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov4.JPG"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov5.JPG"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov6.jpg"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov7.jpg"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov8.jpg"/>
-                <img data-ur-carousel-component="item" src="/stylesheets/resources/moov9.png"/>
-              </div> <!-- scroll_container end -->
-              <div class="cbutton" id="exback" data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
-              <div class="cbutton" id="exnext" data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-state="enabled">&gt;</div>
-            </div><!-- view container end -->
-          </div>
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">The Code</h3>
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="code" data-ur-state="disabled">The CSS</h3>
+    <div class="mainpage_code" id="carouselcode" data-ur-tabs-component="content" data-ur-tab-id="code" data-ur-state="disabled">
+      {% highlight html %}
+      <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-touch="disabled">
+        <div data-ur-carousel-component="scroll_container">
+          <img data-ur-carousel-component="item" src="1.jpg" />
+          <img data-ur-carousel-component="item" src="2.jpg" />
+          <img data-ur-carousel-component="item" src="3.jpg" />
+          <img data-ur-carousel-component="item" src="4.jpg" />
         </div>
-      </div><!-- exampleend-->
-      <div class="mainpage_code" id="carouselcode" data-ur-tabs-component="content" data-ur-tab-id="code" data-ur-state="disabled">
-{% highlight html %}
-<div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-touch="disabled">
-  <div data-ur-carousel-component="scroll_container">
-    <img data-ur-carousel-component="item" src="1.jpg" />
-    <img data-ur-carousel-component="item" src="2.jpg" />
-    <img data-ur-carousel-component="item" src="3.jpg" />
-    <img data-ur-carousel-component="item" src="4.jpg" />
-  </div>
-  <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
-  <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">&gt;</div>
-</div>
-{% endhighlight %}
-      </div><!-- codeend-->
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">&gt;</div>
+      </div>
+      {% endhighlight %}
+    </div><!-- codeend-->
+    <div class="mainpage_code" id="carouselcode" data-ur-tabs-component="content" data-ur-tab-id="css" data-ur-state="disabled">
+      {% highlight css %}
+      html {
+      margin: 0;
+      padding: 0; }
+      {% endhighlight %}
+    </div><!-- cssend-->
   </div>
   <hr />
-  
+
+  <!-- Defunct Example -->
   <div class="ur_ex" data-ur-set="tabs">
     <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</h3>
     <h3 data-ur-tabs-component="button" data-ur-tab-id="code" data-ur-state="disabled">The Code</h3>
@@ -142,27 +154,96 @@ home_selected: selected
       </div>
     </div><!-- example end-->
     <div class="mainpage_code" id="select_list_code" data-ur-tabs-component="content" data-ur-tab-id="code" data-ur-state="disabled">
-{% highlight html %}
-<div data-ur-set="select-list">
-  <select data-ur-select-list-component="select">
-    <option selected="true" value="SKU-A"> Click on </option>
-    <option value="SKU-B"> a Value </option>
-    <option value="SKU-C"> in this </option>
-    <option value="SKU-D"> List </option>
-  </select>
-  <ul data-ur-select-list-component="content">
-    <li value="SKU-A"> Click on </li>
-    <li value="SKU-B"> a Value </li>
-    <li value="SKU-C"> in this </li>
-    <li value="SKU-D"> List </li>
-  </ul>
-</div>
-{% endhighlight %}
+      {% highlight html %}
+      <div data-ur-set="select-list">
+        <select data-ur-select-list-component="select">
+          <option selected="true" value="SKU-A"> Click on </option>
+          <option value="SKU-B"> a Value </option>
+          <option value="SKU-C"> in this </option>
+          <option value="SKU-D"> List </option>
+        </select>
+        <ul data-ur-select-list-component="content">
+          <li value="SKU-A"> Click on </li>
+          <li value="SKU-B"> a Value </li>
+          <li value="SKU-C"> in this </li>
+          <li value="SKU-D"> List </li>
+        </ul>
+      </div>
+      {% endhighlight %}
     </div>
   </div>
   <hr />
     
-    
+  <!-- Test -->
+  <div class="demonstration">
+  <p> Touch-enabled Widget </p>
+  <div id="carousel_demonstration" data-ur-set="tabs">
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled"> Widget</h3>
+
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="html">HTML</h3>
+
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="CSS">CSS</h3>
+
+    <div id="carousel_widget" class="example_widget"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
+
+      <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
+        <span data-ur-carousel-component="count"> -- count -- </span>
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
+          Prev
+        </div>
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="next" >
+          Next
+        </div>
+        <div data-ur-carousel-component="view_container" data-ur-infinite="disabled">
+          <div data-ur-carousel-component="scroll_container">
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html">
+      {% highlight html %}
+      <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-id="MyFirstCarousel">
+        <span data-ur-carousel-component="count"> -- count -- </span>
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
+        <div data-ur-carousel-component='scroll_container'>
+          <img data-ur-carousel-component='item' src='images/sample1.png' alt="1" />
+          <img data-ur-carousel-component='item' src='images/sample2.png' alt="2" />
+          <img data-ur-carousel-component='item' src='images/sample3.png' alt="3" />
+          <img data-ur-carousel-component='item' src='images/sample4.png' alt="4" />
+          <img data-ur-carousel-component='item' src='images/sample5.png' alt="5" />
+          <img data-ur-carousel-component='item' src='images/sample6.png' alt="6" />
+          <img data-ur-carousel-component='item' src='images/sample7.png' alt="7" />
+          <img data-ur-carousel-component='item' src='images/sample8.png' alt="8" />
+        </div>
+      </div>
+      {% endhighlight %}
+    </div>
+
+    <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="CSS">
+      {% highlight css %}
+      div[data-ur-carousel-component="view_container"] {
+        width: 100%;
+        overflow-x: hidden;
+      }
+      div[data-ur-carousel-component="scroll_container"] > * {
+        display: inline-block;
+        float: left;
+      }
+      div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
+        opacity: 0.3;
+      }
+      {% endhighlight %}
+    </div>
+  </div>
+</div>
+  <!-- Uranium is used by -->
   <h2>Uranium is used by...</h2>
   <div id="threelogoholder">
     <a href="http://m.macys.com/"><img src="images/BW_macys.png" alt="Macy's" /></a>
