--- a/migration/index.html
+++ b/migration/index.html
@@ -433,7 +433,7 @@
 
     <h1>Carousel</h1>
     <!--<p id="jump" onclick="Ur.Widgets.carousel.JumpCarousel.jumpToIndex(4)">Jump to 5th item</p>-->
-    <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-id="MyFirstCarousel">
+    <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-id="MyFirstCarousel" data-ur-clones="1">
       <div data-ur-carousel-component="dots"></div>
       <span data-ur-carousel-component="count"> -- count -- </span>
       <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
